compiler/test-data/parser/errors/enum/unclosed_brace.frel
module test

enum Status { Pending Active
